// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TikTok Video Block should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  width: 325px;
  aspect-ratio: calc(
      1 / 1.77 - 0.15
    );
  border: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <iframe
      allow="encrypted-media;"
      allowfullscreen=""
      class="emotion-2 emotion-3"
      src="https://www.tiktok.com/embed/v2/6718335390845095173"
      title="Embedded TikTok Video"
    />
  </div>
</DocumentFragment>
`;

exports[`TikTok Video Block should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  width: 325px;
  aspect-ratio: calc(
      1 / 1.77 - 0.15
    );
  border: 0;
}

<div
    class="extra-classname emotion-0 emotion-1"
  >
    <iframe
      allow="encrypted-media;"
      allowfullscreen=""
      class="emotion-2 emotion-3"
      src="https://www.tiktok.com/embed/v2/6718335390845095173"
      title="Embedded TikTok Video"
    />
  </div>
</DocumentFragment>
`;
